Bug 729993 - Cherry-pick harfbuzz fixes for finer-grained cluster support (9099e48e29, c7dfe316f8). r=behdad (upstream)